--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: rgb(0,128,0);
   height: 150px;
   padding: 20px;
-  color: white;
+  color: rgb(255, 165, 0);
 }
 
 .App-intro {
