--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,37 @@ body {
   padding: 0;
   font-family: 'Helvetica Neue', 'Helvetica', 'Comic Sans', sans-serif;
 }
+
+.countdownContainer {
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+}
+
+.countdownContainer p {
+  background-color: black;
+  color: white;
+  width: 16rem;
+  margin: 0 auto;
+}
+
+.countdownContainer p:first-child {
+  font-size: 2rem;
+  padding-top: 1rem;
+}
+
+.countdownContainer p:last-child {
+  font-size: 1.4rem;
+  padding-bottom: 1rem;
+}
+
+.leprechauns {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+}
+
+.leprechauns iframe {
+  margin: 1rem;
+}
